# rust-checker

./: .gitignore  Cargo.toml  README.md  rust.supp
.github/workflows/: ci.yml
docs/: development-plan.md  plugin-guide.md
docs/plan/: plan-v1.md  plan-v2.md  plan-v3.md
examples/: full.toml  minimal.toml  standard.toml  workspace.toml
fixtures/hello-lib/: Cargo.toml
fixtures/hello-lib/.rust-checker/history/20260522-013148/: result.json
fixtures/hello-lib/.rust-checker/reports/: ci_result.json  summary.md
fixtures/hello-lib/.rust-checker/reports/quality/: fmt.md  test.md
fixtures/hello-lib/src/: lib.rs
fixtures/hello-workspace/: Cargo.toml
fixtures/hello-workspace/.rust-checker/: config.toml
fixtures/hello-workspace/.rust-checker/reports/: ci_result.json  summary.md
fixtures/hello-workspace/.rust-checker/reports/quality/: build.md  (+2 more)
scripts/: install-tools.sh
src/: cli.rs  history.rs  lib.rs  logger.rs  main.rs
src/cli/: diff.rs  init.rs  mod.rs  plugin.rs  run.rs  upgrade.rs  watch.rs
src/commands/: diff.rs  init.rs  plugin.rs  run.rs  upgrade.rs  watch.rs
src/config/: mod.rs  types.rs
src/diff/: mod.rs
src/engine/: dependency_check.rs  mod.rs  runner.rs
src/history/: mod.rs
src/logger/: mod.rs
src/plugin/: mod.rs
src/report/: html.rs  json.rs  markdown.rs  mod.rs  summary.rs
src/runner/: dependency_check.rs  mod.rs
src/tools/: asan.rs  audit.rs  bench.rs  binary.rs  bloat.rs  build.rs  clippy.rs  coverage.rs  deny.rs  deps.rs  doc.rs  flamegraph.rs  fmt.rs  geiger.rs  metrics.rs  mod.rs  msrv.rs  semver.rs  semver_checks.rs  test.rs  udeps.rs  valgrind.rs
src/upgrade/: mod.rs
src/watch/: mod.rs
src/workspace/: mod.rs
tests/: integration.rs
(+3 files in other folders)
