[package]
name = "rust-checker"
version = "0.1.0"
edition = "2021"
description = "A unified Rust project quality checker"
license = "MIT"

[[bin]]
name = "rust-checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde_json = "1"
dialoguer = "0.11"
indicatif = "0.17"
which = "6"
notify = "6"
