[package]
name = "rust-checker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
chrono = "0.4"
anyhow = "1"
which = "6"
dialoguer = "0.11"
indicatif = "0.17"
indexmap = { version = "2", features = ["serde"] }
ureq = "2"
notify = "6"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
