[package]
name = "rust-checker-cli"
version = "0.1.0"
edition = "2021"
description = "rust-checker 是一个面向 Rust 项目的本地质量检查工具。它通过统一的配置文件调度多种 Cargo 工具，生成结构化报告，帮助开发者在发布前快速掌握构建质量、测试覆盖率、依赖安全等关键指标。"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-checker-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
chrono = "0.4"
anyhow = "1"
which = "6"
dialoguer = "0.11"
indicatif = "0.17"
indexmap = { version = "2", features = ["serde"] }
ureq = "2"
notify = "6"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
